tests/security/taintThroughPromotedProperty/output.txt
ERROR: TaintedData - input.hack:11:10 - Data from a URL query string found its way to an HTML tag